# system-utils-rs

./: Cargo.toml  LICENSE.md  README.md
examples/: media.rs  snapshot.rs
src/: error.rs  lib.rs  prelude.rs
src/audio/: mod.rs
src/devices/: mod.rs  structs.rs
src/info/: mod.rs
src/media/: meta.rs  mod.rs
src/metrics/: mod.rs  structs.rs
src/monitor/: mod.rs
src/power/: mod.rs  mode.rs
src/theme/: mod.rs  style.rs
