[package]
name = "system-utils"
description = "Cross-platform utilities for interacting with operating system features such as audio control, power management, system information, hardware monitoring, and device enumeration."
keywords = ["system", "utilities", "metrics", "audio", "power"]
categories = ["development-tools"]
version = "0.1.5"
license = "MIT"
authors = ["Bulat Sh. <synapdrake@ya.ru>"]
repository = "https://github.com/fuderis/system-utils-rs"
readme = "README.md"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
atoman = "0.4.0"
macron = { version = "0.2.1", features = ["derive", "path", "string"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", optional = true }
regex = { version = "1.12.4", optional = true }
chrono = { version = "0.4.45", features = ["serde"], optional = true }

sysinfo = { version = "0.38.4", optional = true }
network-interface = { version = "2.0.5", optional = true }
wgpu = { version = "26.0", optional = true }
pollster = { version = "0.4.0", optional = true }
battery = { version = "0.7.8", optional = true }
display-info = { version = "0.5.9", optional = true }
cpal = { version = "0.18.1", optional = true }
rusb = { version = "0.9.4", optional = true }
nokhwa = { version = "0.10.11", features = ["input-v4l"], optional = true }

[features]
full = ["info", "metrics", "devices", "monitor", "audio", "power", "theme"]
full-metrics = ["monitor", "info", "metrics", "devices"]
monitor = ["info"]
info = ["dep:sysinfo"]
metrics = ["dep:sysinfo", "dep:network-interface", "dep:wgpu", "dep:pollster", "dep:battery"]
devices = ["dep:display-info", "dep:cpal", "dep:rusb", "dep:nokhwa"]
audio = ["dep:regex"]
media = []
power = ["dep:chrono"]
theme = []
